<?xml version="1.0"?>
<package>
  <name>robo_surrogate</name>
  <version>0.1.0</version>
  <description>
    This is a generic version of the pr2_surrogate package. Which allows
    you to turn your robot into a surrogate for your physical body using
    the Oculus RIFT HMD and Razer Hydra controller.
  </description>
  <maintainer email="fergs@unboundedrobotics.com">Michael Ferguson</maintainer>

  <license>BSD</license>

  <author email="dgossow@willowgarage.com">David Gossow</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>actionlib</build_depend>
  <build_depend>boost</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  
  <run_depend>actionlib</run_depend>
  <run_depend>control_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>razer_hydra</run_depend>
  <run_depend>roscpp</run_depend>

  <run_depend>image_transport_plugins</run_depend>
  <run_depend>audio_capture</run_depend>
  <run_depend>audio_play</run_depend>
  <run_depend>openni2_camera</run_depend>
  <run_depend>rviz_oculus</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>tf</run_depend>

</package>
